--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas id="gameCanvas" width="800" height="600" style="border: white solid 5px;"></canvas>
     <script>
         // @author: Samuel Reyes Alvarez
-        // @version: 1 (31/07/2019)
+        // @version: 2 (31/07/2019)
         var canvas;
         var canvasContext;
         var ballX;
@@ -27,8 +27,8 @@
         var brickGrid;
         var winner;
         var looser;
-        var bestScore;
 
+        var bestScore = 0;
         var started = false;
 
         const SPEED = 30;
